# bridgebot

./: Cargo.toml  README.md
src/: main.rs
src/actions/: check_links.rs  link_from_hub.rs  mod.rs  notify_action.rs  shell.rs  update_frontmatter.rs
src/config/: mod.rs
src/git/: mod.rs
src/rules/: mod.rs  triggers.rs
src/vault/: frontmatter.rs  links.rs  mod.rs  notes.rs
src/watcher/: mod.rs
